--- a/src/containers/Aotd.css
+++ b/src/containers/Aotd.css
@@ -1,8 +1,3 @@
-.h2 {
-    color: white; 
-    width: 100%; 
-} 
-
 .container {
     padding-top:0%;
     width: 70%;
